--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "expo": "~54.0.7",
     "expo-constants": "~18.0.8",
     "expo-document-picker": "^14.0.7",
+    "expo-file-system": "^19.0.14",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
@@ -42,6 +43,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
+    "react-native-websocket": "^1.0.2",
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.3.1"
   },
