--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-animated-rolling-numbers": "^2.0.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
@@ -44,7 +45,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-websocket": "^1.0.2",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.5.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
