--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,9 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@tsconfig/react-native": "^3.0.7",
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-countdown-component": "^2.7.4",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
