--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,8 @@
     "react-native-web": "~0.21.0",
     "react-native-websocket": "^1.0.2",
     "react-native-worklets": "^0.5.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "expo-linear-gradient": "~15.0.7"
   },
   "devDependencies": {
     "@tsconfig/react-native": "^3.0.7",
