--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.4",
     "expo-splash-screen": "~31.0.10",
@@ -39,6 +40,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-animated-rolling-numbers": "^2.0.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
@@ -47,8 +49,7 @@
     "react-native-web": "~0.21.0",
     "react-native-websocket": "^1.0.2",
     "react-native-worklets": "^0.5.1",
-    "tailwind-merge": "^3.3.1",
-    "expo-linear-gradient": "~15.0.7"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tsconfig/react-native": "^3.0.7",
